--- a/WinEQ-EQ.ini
+++ b/WinEQ-EQ.ini
@@ -1,5 +1,5 @@
 [General]
-Indicator=1
+Indicator=0
 IndicatorX=20
 IndicatorY=28
 LockGamma=1
@@ -23,7 +23,7 @@ WindowText=WinEQ {VERSION} {PLUGIN} - EverQuest (Hotkey: {HOTKEY})
 GlobalHotkey=AUTO
 EQPath=D:\Games\EverQuest P99
 EQClientINI=.\eqclient.ini
-Preset=0
+Preset=2
 Locale=0
 Adapter=-1
 Sound=1
@@ -108,7 +108,7 @@ WindowText=WinEQ {VERSION} {PLUGIN} - EverQuest (Hotkey: {HOTKEY})
 GlobalHotkey=AUTO
 EQPath=D:\Games\EverQuest Project 1999
 EQClientINI=.\eqclient.ini
-Preset=0
+Preset=2
 Locale=0
 Adapter=-1
 Sound=1
@@ -122,3 +122,54 @@ PIPX=20
 PIPY=20
 PIPBorder=0
 PIPScale=0.2000
+[Profile3]
+Name=EQLite : From EQ Titanium - P99
+WindowText=WinEQ {VERSION} {PLUGIN} - EverQuest (Hotkey: {HOTKEY})
+GlobalHotkey=AUTO
+EQPath=C:\Program Files (x86)\EQLite
+EQClientINI=.\eqclient.ini
+Preset=2
+Locale=0
+Adapter=-1
+Sound=1
+Patch=0
+TestServer=0
+Tile=-1
+FGTileScale=0.5000
+BGTileScale=0.5000
+PIP=1
+PIPX=20
+PIPY=20
+PIPBorder=0
+PIPScale=0.2000
+[Profile4]
+Name=EQLite : From EQ Titanium
+WindowText=WinEQ {VERSION} {PLUGIN} - EverQuest (Hotkey: {HOTKEY})
+GlobalHotkey=AUTO
+EQPath=C:\Program Files (x86)\EQLite P99
+EQClientINI=.\eqclient.ini
+Preset=2
+Locale=0
+Adapter=-1
+Sound=1
+Patch=0
+TestServer=0
+Tile=-1
+FGTileScale=0.5000
+BGTileScale=0.5000
+PIP=0
+PIPX=20
+PIPY=20
+PIPBorder=0
+PIPScale=0.2000
+[Preset4]
+Name=Borderless Windowed
+X=0
+Y=0
+FullScreen=0
+AutoRelease=0
+AlwaysOnTop=0
+LockPosition=0
+LockSize=0
+Border=0
+Scale=1.0000
